--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,24 +9,24 @@ find_package(Boost COMPONENTS unit_test_framework REQUIRED)
 
 configure_file(version.h.in version.h)
 
-add_executable(ip_filter ip_filter.cpp)
+add_executable(print_ip print_ip.cpp)
 
-set_target_properties(ip_filter PROPERTIES
-    CXX_STANDARD 14
+set_target_properties(print_ip PROPERTIES
+    CXX_STANDARD 17
     CXX_STANDARD_REQUIRED ON
 )
 
-target_include_directories(ip_filter
+target_include_directories(print_ip
     PRIVATE "${CMAKE_BINARY_DIR}"
 )
 
 if (MSVC)
-    target_compile_options(ip_filter PRIVATE
+    target_compile_options(print_ip PRIVATE
         /W4
     )
 else ()
 
-    target_compile_options(ip_filter PRIVATE
+    target_compile_options(print_ip PRIVATE
         -Wall -Wextra -pedantic -Werror
     )
 
@@ -34,7 +34,7 @@ endif()
 
 
 
-install(TARGETS ip_filter RUNTIME DESTINATION bin)
+install(TARGETS print_ip RUNTIME DESTINATION bin)
 
 set(CPACK_GENERATOR DEB)
 
