--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,30 +3,30 @@ cmake_minimum_required(VERSION 3.10)
 set(PATCH_VERSION "1" CACHE INTERNAL "Patch version")
 set(PROJECT_VESRION 0.0.${PATCH_VERSION})
 
-project(allocator VERSION ${PROJECT_VESRION})
+project(bulk VERSION ${PROJECT_VESRION})
 
 find_package(Boost COMPONENTS unit_test_framework REQUIRED)
 
 configure_file(version.h.in version.h)
 
-add_executable(allocator allocator.cpp)
+add_executable(bulk bulk.cpp)
 
-set_target_properties(allocator PROPERTIES
-    CXX_STANDARD 14
+set_target_properties(bulk PROPERTIES
+    CXX_STANDARD 17
     CXX_STANDARD_REQUIRED ON
 )
 
-target_include_directories(allocator
+target_include_directories(bulk
     PRIVATE "${CMAKE_BINARY_DIR}"
 )
 
 if (MSVC)
-    target_compile_options(allocator PRIVATE
+    target_compile_options(bulk PRIVATE
         /W4
     )
 else ()
 
-    target_compile_options(allocator PRIVATE
+    target_compile_options(bulk PRIVATE
         -Wall -Wextra -pedantic -Werror
     )
 
@@ -34,7 +34,7 @@ endif()
 
 
 
-install(TARGETS allocator RUNTIME DESTINATION bin)
+install(TARGETS bulk RUNTIME DESTINATION bin)
 
 set(CPACK_GENERATOR DEB)
 
